--- a/council.html
+++ b/council.html
@@ -36,8 +36,8 @@
 var units = "Dollars";
  
 var margin = {top: 10, right: 10, bottom: 10, left: 10},
-    width = 1200 - margin.left - margin.right,
-    height = 2000 - margin.top - margin.bottom;
+    width = 5200 - margin.left - margin.right,
+    height = 5000 - margin.top - margin.bottom;
  
 var formatNumber = d3.format(",.0f"),    // zero decimal places
     format = function(d) { return formatNumber(d) + " " + units; },
@@ -60,7 +60,7 @@ var sankey = d3.sankey()
 var path = sankey.link();
  
 // load the data
-d3.json("council.json", function(error, graph) {
+d3.json("inout.json", function(error, graph) {
  
     var nodeMap = {};
     graph.nodes.forEach(function(x) { nodeMap[x.name] = x; });
